# code-intel

./: .coverage  .env  .env-example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MCP_SETUP.md  README.md  SECURITY.md  debug_dart.py  debug_dart_methods.py  init_memory.py  manual_sync.py  mcp_cognee.py  pyproject.toml  test_queries.py  test_sync.py
.agent/: MISSION_PLAN.md  STATE.md
.agent/rules/: mcp.md
.agent/workflows/: Senior.md  architect.md  commit.md  developer.md  next-milestone.md  report-blocker.md
.github/: copilot-instructions.md
.github/agents/: selos-golden-reviewer.agent.md
.roo/rules/: default.md
docs/: API_CONTRACT-core.md  APP.md  CODE_QUALITY_REVIEW.md  PROGRESS.md  PROJECT_PLAN.md  TECHNOLOGY.md  TEST_COVERAGE_ANALYSIS.md  feedback.md
src/: __init__.py  cache.py  config.py  context.py  embeddings.py  git_utils.py  indexer.py  knowledge_graph.py  linker.py  models.py  parser.py  scoping.py  server.py  storage.py  utils.py
tests/: benchmark_performance.py  conftest.py  run_test.py  run_test_edges.py  test_cache.py  test_dart_parsing.py  test_dart_references.py  test_decorators.py  test_embeddings.py  test_embeddings_extra.py  test_find_definition_origin.py  test_firestore_parsing.py  test_force_scan.py  test_fortress.py  test_get_index_status.py  test_get_stats.py  test_git_utils.py  test_impact_analysis.py  test_inspect_symbol.py  test_integration_full.py  test_isolation.py  test_knowledge_graph.py  test_mcp_logic.py  test_mcp_security.py  test_mcp_validation.py  test_metadata_extraction.py  test_parser.py  test_parser_usages.py  test_path_normalization.py  test_python_depends_linking.py  test_resolution_dart.py  test_resolution_js.py  test_resolution_python.py  test_scope_tuning.py  test_scoping.py  test_scoping_prio.py  test_search_logic.py  test_selos_regressions.py  test_stats_enhancements.py  test_storage.py  (+3 more)
(+47 files in other folders)
