[project]
name = "agentic-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cognee>=0.5.1",
    "fastembed>=0.6.0",
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "mistralai>=1.9.11",
    "pydocket>=0.16.6",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.6",
]
