[project]
name = "agentic-env"
version = "3.0.0"
description = "Lightweight Code Intelligence MCP Server — tree-sitter AST maps + embedding-only RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    # --- Tree-sitter core + language grammars ---
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-json>=0.24.0",
    "tree-sitter-yaml>=0.7.0",
    "tree-sitter-markdown>=0.4.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "pyarrow>=18.0.0",
    "lancedb>=0.17.0",
    "duckdb>=1.1.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-language-pack>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
